<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_1x"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileInfoFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_3x"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="@dimen/spacing_3x"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/profile_info_cover_image_view"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:scaleType="centerCrop"
                android:textAlignment="center"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/profile_info_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_2x"
                android:text="@string/name"
                android:textSize="@dimen/font_4x"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/profile_info_cover_image_view"/>

            <TextView
                android:id="@+id/profile_info_age_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_3x"
                android:text="@string/age"
                android:textSize="@dimen/font_3x"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/profile_info_name_text_view"/>

            <TextView
                android:id="@+id/profile_info_location_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_3x"
                android:text="@string/location"
                android:textSize="@dimen/font_3x"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/profile_info_age_text_view"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/profile_info_show_photos_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_3x"
        app:layout_constraintStart_toStartOf="@id/card_view_profile_info"
        app:layout_constraintTop_toBottomOf="@id/card_view_profile_info"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/show_photos"
            android:textStyle="bold"
            android:padding="@dimen/spacing_3x"
            android:textSize="@dimen/font_3x"
            android:textColor="@color/black"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_info_show_curiosities_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_3x"
        app:layout_constraintStart_toEndOf="@id/profile_info_show_photos_view"
        app:layout_constraintTop_toTopOf="@id/profile_info_show_photos_view"
        app:layout_constraintBottom_toBottomOf="@id/profile_info_show_photos_view">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:padding="@dimen/spacing_3x"
            android:textSize="@dimen/font_3x"
            android:text="@string/show_curiosities"
            android:textColor="@color/black"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>